{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 1082,
  "lineage": "81bb92be-f74b-d51e-4ec9-ca648e32ce25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chachat-api-fumidai-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0eadcbbe290c25507",
            "domain": "vpc",
            "id": "eipalloc-0c644cb31efb3f414",
            "instance": "i-02ee8f043707d4b38",
            "network_interface": "eni-01cafe4eaebc4f700",
            "private_dns": "ip-192-168-1-56.ap-northeast-1.compute.internal",
            "private_ip": "192.168.1.56",
            "public_dns": "ec2-18-180-200-204.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.200.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.chachat-api-fumidai-ec2",
            "aws_internet_gateway.chachat-api-internet-gateway",
            "aws_key_pair.public-key",
            "aws_security_group.chachat-api-fumidai-security-group",
            "aws_subnet.chachat-api-subnet-1c",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chachat-api-web-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0982c1032aed2dba8",
            "domain": "vpc",
            "id": "eipalloc-0ba9de98cd99f9ebc",
            "instance": "i-0257a24329da2de11",
            "network_interface": "eni-081ec384e25adc638",
            "private_dns": "ip-192-168-0-54.ap-northeast-1.compute.internal",
            "private_ip": "192.168.0.54",
            "public_dns": "ec2-3-115-56-173.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.115.56.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.chachat-api-web-profile",
            "aws_iam_role.chachat-api-web-role",
            "aws_instance.chachat-api-web-ec2",
            "aws_internet_gateway.chachat-api-internet-gateway",
            "aws_key_pair.public-key",
            "aws_security_group.chachat-api-web-security-group",
            "aws_subnet.chachat-api-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chachat-api-fumidai-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce107ae7af2e92b5",
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:instance/i-02ee8f043707d4b38",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ee8f043707d4b38",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "public-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01cafe4eaebc4f700",
            "private_dns": "ip-192-168-1-56.ap-northeast-1.compute.internal",
            "private_ip": "192.168.1.56",
            "public_ip": "18.180.200.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c244b5db0bfacd60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e88657e6a03d536a",
            "tags": {
              "Name": "chachat-api-fumidai"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00b9a933144d9ae8c"
            ]
          },
          "dependencies": [
            "aws_key_pair.public-key",
            "aws_security_group.chachat-api-fumidai-security-group",
            "aws_subnet.chachat-api-subnet-1c",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chachat-api-web-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce107ae7af2e92b5",
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:instance/i-0257a24329da2de11",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "chachat-api-web-profile",
            "id": "i-0257a24329da2de11",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081ec384e25adc638",
            "private_dns": "ip-192-168-0-54.ap-northeast-1.compute.internal",
            "private_ip": "192.168.0.54",
            "public_ip": "52.194.249.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-094d21915586784c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa2098099a3c7553",
            "tags": {
              "Name": "chachat-api-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb6092bd6b8d8188"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.chachat-api-web-profile",
            "aws_iam_role.chachat-api-web-role",
            "aws_key_pair.public-key",
            "aws_security_group.chachat-api-web-security-group",
            "aws_subnet.chachat-api-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chachat-api-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:internet-gateway/igw-05c5102f1b7ae1c1c",
            "id": "igw-05c5102f1b7ae1c1c",
            "owner_id": "569113468865",
            "tags": {
              "Name": "chachat-api-internet-gateway"
            },
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chachat-api-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:loadbalancer/app/chachat-api-alb/9e4d8c050e049350",
            "arn_suffix": "app/chachat-api-alb/9e4d8c050e049350",
            "dns_name": "chachat-api-alb-1399519298.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:loadbalancer/app/chachat-api-alb/9e4d8c050e049350",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chachat-api-alb",
            "security_groups": [
              "sg-0349f25ad61c0692c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aa2098099a3c7553"
              },
              {
                "subnet_id": "subnet-0e88657e6a03d536a"
              }
            ],
            "subnets": [
              "subnet-0aa2098099a3c7553",
              "subnet-0e88657e6a03d536a"
            ],
            "vpc_id": "vpc-06e4f8efe72d01396",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.chachat-api-alb-security-group",
            "aws_subnet.chachat-api-subnet-1a",
            "aws_subnet.chachat-api-subnet-1c",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chachat-api-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:listener/app/chachat-api-alb/9e4d8c050e049350/2cecaf2b87ea0180",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:569113468865:certificate/a5b8a50b-ed3b-48cb-a04c-2101346c0803",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:targetgroup/chachat-api-alb-target-group/8ab73cbb4b9c4ff5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:listener/app/chachat-api-alb/9e4d8c050e049350/2cecaf2b87ea0180",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:loadbalancer/app/chachat-api-alb/9e4d8c050e049350",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2015-05",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.chachat-api-alb",
            "aws_lb_target_group.chachat-api-alb-target-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "chachat-api-alb-listener-ruler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:targetgroup/chachat-api-alb-target-group/8ab73cbb4b9c4ff5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:listener-rule/app/chachat-api-alb/9e4d8c050e049350/2cecaf2b87ea0180/78cef5870e8d2b56",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:listener-rule/app/chachat-api-alb/9e4d8c050e049350/2cecaf2b87ea0180/78cef5870e8d2b56",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:listener/app/chachat-api-alb/9e4d8c050e049350/2cecaf2b87ea0180",
            "priority": 99
          },
          "dependencies": [
            "aws_lb.chachat-api-alb",
            "aws_lb_listener.chachat-api-alb-listener",
            "aws_lb_target_group.chachat-api-alb-target-group",
            "aws_security_group.chachat-api-alb-security-group",
            "aws_subnet.chachat-api-subnet-1a",
            "aws_subnet.chachat-api-subnet-1c",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chachat-api-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:targetgroup/chachat-api-alb-target-group/8ab73cbb4b9c4ff5",
            "arn_suffix": "targetgroup/chachat-api-alb-target-group/8ab73cbb4b9c4ff5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:targetgroup/chachat-api-alb-target-group/8ab73cbb4b9c4ff5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "chachat-api-alb-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "chachat-api-alb-target-group-attachment_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:targetgroup/chachat-api-alb-target-group/8ab73cbb4b9c4ff5-20201108121153286500000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569113468865:targetgroup/chachat-api-alb-target-group/8ab73cbb4b9c4ff5",
            "target_id": "i-0257a24329da2de11"
          },
          "dependencies": [
            "aws_iam_instance_profile.chachat-api-web-profile",
            "aws_iam_role.chachat-api-web-role",
            "aws_instance.chachat-api-web-ec2",
            "aws_key_pair.public-key",
            "aws_lb_target_group.chachat-api-alb-target-group",
            "aws_security_group.chachat-api-web-security-group",
            "aws_subnet.chachat-api-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chachat-api-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c5102f1b7ae1c1c",
            "id": "r-rtb-093f90dba70b4a9581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093f90dba70b4a958",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.chachat-api-internet-gateway",
            "aws_route_table.chachat-api-route-table",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chachat-api-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-093f90dba70b4a958",
            "owner_id": "569113468865",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c5102f1b7ae1c1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chachat-api-route-table"
            },
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chachat-api-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea7359cde79cfff",
            "route_table_id": "rtb-093f90dba70b4a958",
            "subnet_id": "subnet-0aa2098099a3c7553"
          },
          "dependencies": [
            "aws_route_table.chachat-api-route-table",
            "aws_subnet.chachat-api-subnet-1a",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chachat-api-route-table-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea7359cde79cfff",
            "route_table_id": "rtb-093f90dba70b4a958",
            "subnet_id": "subnet-0aa2098099a3c7553"
          },
          "dependencies": [
            "aws_route_table.chachat-api-route-table",
            "aws_subnet.chachat-api-subnet-1a",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chachat-api-route-table-association-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7dfbef299318c35",
            "route_table_id": "rtb-093f90dba70b4a958",
            "subnet_id": "subnet-0e88657e6a03d536a"
          },
          "dependencies": [
            "aws_route_table.chachat-api-route-table",
            "aws_subnet.chachat-api-subnet-1c",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chachat-api-alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:security-group/sg-0349f25ad61c0692c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0349f25ad61c0692c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "chachat-api-alb-security-group",
            "name_prefix": "",
            "owner_id": "569113468865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chachat-api-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chachat-api-fumidai-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:security-group/sg-00b9a933144d9ae8c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b9a933144d9ae8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "222.224.169.129/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chachat-api-fumidai-security-group",
            "name_prefix": "",
            "owner_id": "569113468865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chachat-api-fumidai-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chachat-api-web-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:security-group/sg-0eb6092bd6b8d8188",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb6092bd6b8d8188",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b9a933144d9ae8c"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0349f25ad61c0692c"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0349f25ad61c0692c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chachat-api-web-security-group",
            "name_prefix": "",
            "owner_id": "569113468865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chachat-api-web-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-alb-rule-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3159144207",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0349f25ad61c0692c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-alb-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-api-rule-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-386330683",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eb6092bd6b8d8188",
            "self": false,
            "source_security_group_id": "sg-0349f25ad61c0692c",
            "to_port": 3000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-alb-security-group",
            "aws_security_group.chachat-api-web-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-api-rule-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2828524478",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0349f25ad61c0692c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-alb-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-fumidai-rule-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "222.224.169.129/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1787674796",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00b9a933144d9ae8c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-fumidai-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-fumidai-rule-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2997888251",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00b9a933144d9ae8c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-fumidai-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-web-rule-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1522589449",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eb6092bd6b8d8188",
            "self": false,
            "source_security_group_id": "sg-0349f25ad61c0692c",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-alb-security-group",
            "aws_security_group.chachat-api-web-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-web-rule-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-771531446",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0eb6092bd6b8d8188",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-web-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chchat-api-web-ssh-rule-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-935635556",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eb6092bd6b8d8188",
            "self": false,
            "source_security_group_id": "sg-00b9a933144d9ae8c",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chachat-api-fumidai-security-group",
            "aws_security_group.chachat-api-web-security-group",
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chachat-api-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:subnet/subnet-0aa2098099a3c7553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0aa2098099a3c7553",
            "map_public_ip_on_launch": false,
            "owner_id": "569113468865",
            "tags": {
              "Name": "chachat-api-subnet-1a"
            },
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chachat-api-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:subnet/subnet-0e88657e6a03d536a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0e88657e6a03d536a",
            "map_public_ip_on_launch": false,
            "owner_id": "569113468865",
            "tags": {
              "Name": "chachat-api-subnet-1c"
            },
            "vpc_id": "vpc-06e4f8efe72d01396"
          },
          "dependencies": [
            "aws_vpc.chachat-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chachat-api-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569113468865:vpc/vpc-06e4f8efe72d01396",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06c7560a0667eefdf",
            "default_route_table_id": "rtb-0eb7bad7550796dbf",
            "default_security_group_id": "sg-0a5256f74113358f0",
            "dhcp_options_id": "dopt-3a040a5e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06e4f8efe72d01396",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb7bad7550796dbf",
            "owner_id": "569113468865",
            "tags": {
              "Name": "chachat-api-vpc"
            }
          }
        }
      ]
    }
  ]
}